# hackasat-finals-2023

./: CHALLENGES.md  README.md
challenges/ground_chals/finalpass/: .gitignore  Makefile  README.md  docker-compose.yml  run.sh
challenges/ground_chals/finalpass/challenge/: Dockerfile  run.sh
challenges/ground_chals/finalpass/static/: CMakeLists.txt  Dockerfile  admin.json  build.sh  create_admin.py  main.cpp
challenges/ground_chals/finalpass/static/manager/: CMakeLists.txt  crypto.cpp  crypto.h  helper.cpp  helper.h  manager.cpp  manager.h  user.cpp  user.h
challenges/ground_chals/has4-web/: .gitignore  README.md  docker-compose.yml
challenges/ground_chals/has4-web/challenge/: Dockerfile  Makefile  server.ini
challenges/ground_chals/has4-web/passwd_util/: README.txt  a.out  mkaccess.c
challenges/ground_chals/has4-web/www/: flag.txt
challenges/satellite_chals/attitude/: CMakeLists.txt
challenges/satellite_chals/attitude/h/: Attitude.hpp  Safe.hpp
challenges/satellite_chals/attitude/src/: Attitude.cpp  Safe.cpp  entry.cpp
challenges/satellite_chals/attitude/ut/: attitude_ut.hpp
challenges/satellite_chals/containers/: CMakeLists.txt  readme.md 
challenges/satellite_chals/containers/h/: circular.hpp  filestore.hpp  key_queue.hpp  persistent.hpp
challenges/satellite_chals/containers/ut/: TestCircular.hpp  TestExample.hpp  TestFileStore.hpp  TestKeyQueue.hpp  TestPersistent.hpp
challenges/satellite_chals/cpp_base/: CMakeLists.txt  entrypoint.cpp  readme.md
challenges/satellite_chals/cpp_base/h/: ASyncApp.hpp  AppBase.hpp  BitFields.hpp  ClockFrameApp.hpp  Handlers.hpp  Message.h  PacketFilter.hpp  Packetizer.hpp  RateApp.hpp  StateMachine.h  TimerApp.hpp  io.h  protocol.hpp  secrets.hpp  str.hpp  subprocess.hpp  time.hpp  utils.hpp
challenges/satellite_chals/cpp_base/src/: ASyncApp.cpp  AppBase.cpp  PacketFilter.cpp  RateApp.cpp  TimerApp.cpp  secrets.cpp  subprocess.cpp
challenges/satellite_chals/cpp_base/ut/: TestPacketFilter.hpp  TestPacketizer.hpp
challenges/satellite_chals/crypto/: CMakeLists.txt
challenges/satellite_chals/crypto/h/: base64.hpp  crypto.hpp
challenges/satellite_chals/geofence/: CMakeLists.txt  entrypoint.cpp
challenges/satellite_chals/geofence/h/: Geofence.hpp  GeofenceApp.hpp  Zone.hpp
challenges/satellite_chals/geofence/src/: Geofence.cpp  GeofenceApp.cpp  Zone.cpp
challenges/satellite_chals/geofence/ut/: geofence_ut.hpp  geofenceapp_ut.hpp  zone_ut.hpp
challenges/satellite_chals/gps/: CMakeLists.txt  entrypoint.cpp
challenges/satellite_chals/gps/h/: BestPos.hpp  Gps.hpp  LogParser.hpp  NovatelSerializer.hpp
challenges/satellite_chals/gps/src/: Gps.cpp  NovatelSerializer.cpp
challenges/satellite_chals/gps/ut/: gps_ut.hpp
challenges/satellite_chals/ironbank/: CMakeLists.txt  readme.md
challenges/satellite_chals/ironbank/h/: IronBank.hpp
challenges/satellite_chals/ironbank/h/i686/: clocks.hpp
challenges/satellite_chals/ironbank/h/riscv/: clocks.hpp
challenges/satellite_chals/ironbank/shared/: ib_messages.hpp
challenges/satellite_chals/ironbank/src/: IronBank.cpp  main.cpp
challenges/satellite_chals/lua/: safe.lua  sandbox.lua
challenges/satellite_chals/messages/h/: AttitudeMessages.hpp  AttitudePayloads.hpp  CfeEvsHkMessages.hpp  CfeEvsHkPayloads.hpp  CfeEvsMessages.hpp  CfeEvsPayloads.hpp  CfeHkMessages.hpp  CfeHkPayloads.hpp  CfeSbHkMessages.hpp  CfeSbHkPayloads.hpp  CfeTimeHkMessages.hpp  CfeTimeHkPayloads.hpp  CfeTimeMessages.hpp  CfeTimePayloads.hpp  FilezMessages.hpp  FilezPayloads.hpp  GeofenceMessages.hpp  GeofencePayloads.hpp  GpsMessages.hpp  GpsPayloads.hpp  HeartbeatMessages.hpp  HeartbeatPayloads.hpp  IoMessages.hpp  IoPayloads.hpp  MessageIds.hpp  PingMessages.hpp  PingPayloads.hpp  ScriptMessages.hpp  ScriptPayloads.hpp  ScriptUdpMessages.hpp  ScriptUdpPayloads.hpp  StagingMessages.hpp  StagingPayloads.hpp  TlmMessages.hpp  TlmPayloads.hpp  TvaMessages.hpp  TvaPayloads.hpp  VersionMessages.hpp  VersionPayloads.hpp  sbnMessages.hpp  (+1 more)
challenges/satellite_chals/messages/python/: Attitude.py  CfeEvs.py  CfeEvsHk.py  CfeHk.py  CfeSbHk.py  CfeTime.py  CfeTimeHk.py  Filez.py  Geofence.py  Gps.py  Heartbeat.py  Io.py  Ping.py  Script.py  ScriptUdp.py  Staging.py  Tlm.py  Tva.py  Version.py  apps.py  sbn.py  version.txt
challenges/satellite_chals/network/: CMakeLists.txt
challenges/satellite_chals/network/h/: UdpClient.hpp  UdpServer.hpp
challenges/satellite_chals/network/src/: UdpClient.cpp  UdpServer.cpp
challenges/satellite_chals/script_udp/: CMakeLists.txt
challenges/satellite_chals/script_udp/h/: ScriptUdp.hpp
challenges/satellite_chals/script_udp/src/: ScriptUdp.cpp  entry.cpp
challenges/satellite_chals/script_udp/ut/: ut_scriptudp.hpp
challenges/satellite_chals/spacemath/: CMakeLists.txt  readme.md
challenges/satellite_chals/spacemath/h/: Earth.hpp  Sol.hpp  TimeScale.hpp
challenges/satellite_chals/spacemath/src/: Earth.cpp  Sol.cpp  TimeScale.cpp
challenges/satellite_chals/spacemath/ut/: earth_ut.hpp  sol_ut.hpp  time_ut.hpp
discord_logs/: finals-2023-jmp.txt  finals-2023-krautsat.txt  finals-2023-mhackeroni.txt  finals-2023-poland.txt  finals-2023-spacebitsrus.txt  finals-2023.txt
docs/: README.md  windows.md
game_data/HAS4_FULL_GAME/processed_tlm/: 2023_08_10_00_00_00.0_GPS_GEODETIC.csv  2023_08_10_00_00_00.0_SCRIPT_KIDDIE.csv  2023_08_10_00_00_00.0_SCRIPT_STATUS.csv  2023_08_10_00_00_00.0_SPAP_METADATA.csv
solvers/: .gitignore
solvers/ground_chals/finalpass/solver/: DB.py  Dockerfile  send_file.py  solver.py
solvers/ground_chals/has4-web/solver/: rop-strip-docker-solve-fixed-2004.py  shellcode-2204.py  (+3 more)
solvers/satellite_chals/: all_solve.py  readme.md  scripts.py
solvers/satellite_chals/geofence/: basic_pwn.lua  readme.md  solve.py
solvers/satellite_chals/image/: calc_q.py  example_plan.csv  readme.md  satpos.py  solve.py
solvers/satellite_chals/ironbank/: readme.md  solve.py  solver.lua
solvers/satellite_chals/santa/: basic.lua  readme.md  solve.py  solver.lua
solvers/satellite_chals/script_kiddie/: readme.md  solve.lua  solve.py
(+81 files in other folders)
